package es.unex.cum.mdai.compradoor.data.model;

public class Cliente {
}
