package es.unex.cum.mdai.compradoor.data.model;

public enum TipoServicio {
    LIMPIEZA,
    MANTENIMIENTO,
    REPARACION,
    OTROS
}
